# fftw

./: .gitattributes  .gitignore  .travis.yml  Cargo.toml  LICENSE.md  README.md  azure-pipelines.yml  coverage.sh  intel-mkl-apt.sh  rustfmt.toml
.github/workflows/: rust.yml
ci/: job.yml
examples/: r2r.rs
fftw/: CHANGELOG.md  Cargo.toml
fftw-src/: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  build.rs  fftw-3.3.6-pl1.tar.gz.md5
fftw-sys/: CHANGELOG.md  Cargo.toml  bindgen.sh
fftw-sys/src/: fftw.rs  lib.rs  test.rs
fftw/src/: array.rs  error.rs  lib.rs  plan.rs  types.rs
fftw/tests/: c2c.rs  c2c_aligned.rs  r2c.rs  r2c_aligned.rs  r2r.rs
fftw3-src/: Cargo.toml  build.rs
fftw3-sys/: Cargo.toml  build.rs
fftw3-sys/src/: lib.rs
src/: aligned_vec.rs  array.rs  c2c.rs  complex.rs  enums.rs  error.rs  fftw.rs  lib.rs  nae.rs  pair.rs  plan.rs  r2c.rs  r2r.rs  raw_vec.rs  traits.rs  types.rs  util.rs
tests/: c2c.rs  c2c_aligned.rs  nae.rs  r2c.rs  r2r.rs
