[package]
name = "fftw"
version = "0.3.0"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]

description = "safe wrapper of FFTW3"
repository = "https://github.com/termoshtt/rust-fftw3"
keywords = ["fftw"]
license = "MIT"

[features]
default = ["source"]
system = ["fftw-sys/system"]
source = ["fftw-sys/source"]
intel-mkl = ["fftw-sys/intel-mkl"]

[dependencies]
num-traits = "0.1.37"
num-complex = "0.1.37"
lazy_static = "0.2.2"
derive-new = "0.4"
ndarray = "0.10"
procedurals = "0.2"

[dependencies.fftw-sys]
path = "fftw-sys"
version = "0.3.0"
default-features = false

[dev-dependencies]
float-cmp = "0.2.3"
ndarray-linalg = "0.7"
