[package]
name = "fftw"
version = "0.4.1-alpha.0"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]

description = "safe wrapper of FFTW3"
repository = "https://github.com/termoshtt/rust-fftw3"
keywords = ["fftw"]
license = "MIT"

[features]
default = ["source"]
system = ["fftw-sys/system"]
source = ["fftw-sys/source"]
intel-mkl = ["fftw-sys/intel-mkl"]

[dependencies]
bitflags = "1"
failure = "0.1"
lazy_static = "0.2"
ndarray = "0.11"
num-complex = "0.1"
num-traits = "0.1"

[dependencies.fftw-sys]
path = "fftw-sys"
version = "0.3.0"
default-features = false

[dev-dependencies]
float-cmp = "0.2.3"
