[package]
name = "fftw-src"
version = "0.3.2"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]
edition = "2018"

description = "Source of FFTW"
repository = "https://github.com/rust-math/fftw"
keywords = ["fftw"]
license = "GPL-2.0-or-later"

build = "build.rs"
links = "fftw3"

[build-dependencies]
anyhow = "1.0.31"
cc = "1.0"
fs_extra = "1.1"
ftp = "3.0"
zip = "0.5"
