[package]
name = "fftw-sys"
version = "0.6.0"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]
edition = "2018"

description = "unsafe wrapper of FFTW3"
repository = "https://github.com/rust-math/fftw"
keywords = ["fftw"]
license-file = "../LICENSE.md"

[features]
default = ["source"]
system = []
source = ["fftw-src"]

intel-mkl-static = ["intel-mkl-src/mkl-static-lp64-seq", "intel-mkl-src/download"]
intel-mkl-system = ["intel-mkl-src/mkl-dynamic-lp64-seq"]

[dependencies]
libc = "0.2.71"
num-complex = "0.3.0"

[dependencies.fftw-src]
path = "../fftw-src"
version = "0.3.0"
optional = true

[dependencies.intel-mkl-src]
version = "0.6.0"
no-default-features = true
optional = true

[package.metadata.docs.rs]
no-default-features = true
features = ["system"]

[package.metadata.release]
no-dev-version = true
