[package]
name = "fftw"
version = "0.7.0-alpha.0"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]
edition = "2018"

description = "safe wrapper of FFTW3"
repository = "https://github.com/rust-math/fftw"
keywords = ["fftw"]
license-file = "../LICENSE.md"

[features]
default = ["source"]
system = ["fftw-sys/system"]
source = ["fftw-sys/source"]
intel-mkl = ["fftw-sys/intel-mkl"]

[dependencies]
bitflags = "1.2.1"
failure = "0.1.8"
lazy_static = "1.4.0"
ndarray = "0.13.1"
num-complex = "0.3.0"
num-traits = "0.2.12"

[dependencies.fftw-sys]
path = "../fftw-sys"
version = "0.6.0"
default-features = false

[package.metadata.docs.rs]
no-default-features = true
features = ["system"]
